--- a/MANUALHTML/COMMON/CSS/IE67HACK.CSS
+++ b/MANUALHTML/COMMON/CSS/IE67HACK.CSS
@@ -1,42 +1,5 @@
-#megamenu	{ display: block; list-style: none; }
-
-#journal	{ float: left; background-color: #000000; } 
-#tukubai	{ float: left; background-color: #000000; }
-#tukubai_man	{ float: left; background-color: #000000; }
-#cmd_tips	{ float: left; background-color: #000000; }
-#shell_tips	{ float: left; background-color: #000000; }
-#info		{ float: left; background-color: #000000; }
-
-#journal a	{ color: #FFFFFF; }
-#tukubai a	{ color: #FFFFFF; }
-#tukubai_man a	{ color: #FFFFFF; }
-#cmd_tips a	{ color: #FFFFFF; }
-#shell_tips a	{ color: #FFFFFF; }
-#info a		{ color: #FFFFFF; }
-
-#journal ul	{ display: none; }
-#tukubai ul	{ display: none; }
-#tukubai_man ul	{ display: none; }
-#cmd_tips ul	{ display: none; }
-#shell_tips ul	{ display: none; }
-#info ul	{ display: none; }
-
-#container {
-  background-color: #FFFFFF;
-  filter: alpha(opacity=90);
-  zoom: 1;
-}
-
-#main pre.cmd {
-  background-color: #000000;
-}
-
-#main pre.source {
-  background-color: #000000;
-}
-
 /*
- * Copyright (c) 2012 Universal Shell Programming Laboratoryratory
+ * Copyright (c) 2012,2013 Universal Shell Programming Laboratoryratory
  *
  * Permission is hereby granted, free of charge, to any person 
  * obtaining a copy of this software and associated documentation 
@@ -57,3 +20,40 @@
  * TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE 
  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
+
+#megamenu	{ display: block; list-style: none; }
+
+#JOURNAL	{ float: left; background-color: #000000; } 
+#TUKUBAI	{ float: left; background-color: #000000; }
+#TUKUBAI_MAN	{ float: left; background-color: #000000; }
+#CMD_TIPS	{ float: left; background-color: #000000; }
+#SHELL_TIPS	{ float: left; background-color: #000000; }
+#INFO		{ float: left; background-color: #000000; }
+
+#JOURNAL a	{ color: #FFFFFF; }
+#TUKUBAI a	{ color: #FFFFFF; }
+#TUKUBAI_MAN a	{ color: #FFFFFF; }
+#CMD_TIPS a	{ color: #FFFFFF; }
+#SHELL_TIPS a	{ color: #FFFFFF; }
+#INFO a		{ color: #FFFFFF; }
+
+#JOURNAL ul	{ display: none; }
+#TUKUBAI ul	{ display: none; }
+#TUKUBAI_MAN ul	{ display: none; }
+#CMD_TIPS ul	{ display: none; }
+#SHELL_TIPS ul	{ display: none; }
+#INFO ul	{ display: none; }
+
+#container {
+  background-color: #FFFFFF;
+  filter: alpha(opacity=90);
+  zoom: 1;
+}
+
+#main pre.cmd {
+  background-color: #000000;
+}
+
+#main pre.source {
+  background-color: #000000;
+}
