--- a/MANUALHTML/COMMON/CSS/MENU.CSS
+++ b/MANUALHTML/COMMON/CSS/MENU.CSS
@@ -31,7 +31,7 @@
 #megamenu {
   display: table;
   width: 680px;
-  font-size: 90%;
+  font-size: 85%;
   word-spacing: -0.4em;
   text-align: center;
 }
@@ -41,8 +41,8 @@
   word-spacing: normal;
   position: relative; /* for JavaScript tweak feature */
 
-  background-color: #000000;
-
+  background-color: #444444;
+/*
   background: -webkit-gradient(linear, left top, left bottom, from(#444444), to(#000000)); 
   background: -webkit-linear-gradient(top, #444444, #000000);
   background:    -moz-linear-gradient(top, #444444, #000000);
@@ -50,12 +50,11 @@
   background:      -o-linear-gradient(top, #444444, #000000);
   background:         linear-gradient(top, #444444, #000000);
   filter:     progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#444444, endColorstr=#000000);
-
+*/
   padding-top: 5px;
   padding-right: 3px;
   padding-bottom: 3px;
   padding-left: 3px;
-
 }
 
 #megamenu > li > a {
@@ -178,12 +177,15 @@
 
 .opened {
   color: #FFFFFF !important;
+  background-color: #888888 !important;
+/*
   background: -webkit-gradient(linear, left top, left bottom, from(#888888), to(#333333)) !important;
   background: -webkit-linear-gradient(top, #888888, #333333) !important;
   background:    -moz-linear-gradient(top, #888888, #333333) !important;
   background:     -ms-linear-gradient(top, #888888, #333333) !important;
   background:      -o-linear-gradient(top, #888888, #333333) !important;
   filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#888888, endColorstr=#333333) !important;
+*/
 }
 
 .opened > a {
