--- a/MANUALHTML/COMMON/CSS/PRINT.CSS
+++ b/MANUALHTML/COMMON/CSS/PRINT.CSS
@@ -27,10 +27,17 @@
     width: 100%;
     margin: 0;
     padding: 0;
+    font-size: 80%;
   }
-  h1, h2, h3, ul, ol, dl, img, pre {
+  h1, h2, h3, ul, ol, dl, img, pre, div.nobreak {
     page-break-after: avoid;
     page-break-inside: avoid;
+  }
+  .pagebreak {
+    page-break-before: always;
+  }
+  p {
+    font-size: 90%;
   }
   pre {
     white-space: pre-wrap;
@@ -54,7 +61,6 @@
     font-weight: normal;
     text-decoration: none;
   }
-
   #lastmodified {
     page-break-before: always;
   }
