--- a/MANUALHTML/COMMON/CSS/MENU.CSS
+++ b/MANUALHTML/COMMON/CSS/MENU.CSS
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012,2013 Universal Shell Programming Laboratoryratory
+ * Copyright (c) 2012-2022 Universal Shell Programming Laboratoryratory
  *
  * Permission is hereby granted, free of charge, to any person 
  * obtaining a copy of this software and associated documentation 
@@ -21,12 +21,12 @@
  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
-#JOURNAL	{ width: 106px; line-height: 17px; border-right: solid 1px #999999; }
-#TUKUBAI	{ width:  58px; line-height: 17px; border-right: solid 1px #999999; }
-#TUKUBAI_MAN	{ width: 183px; line-height: 17px; border-right: solid 1px #999999; }
-#CMD_TIPS	{ width:  87px; line-height: 17px; border-right: solid 1px #999999; }
-#SHELL_TIPS	{ width: 171px; line-height: 17px; border-right: solid 1px #999999; }
-#INFO		{ width:  31px; line-height: 17px; border-right: solid 1px #999999; }
+#JOURNAL    { width: 106px; line-height: 17px; border-right: solid 1px #999999; }
+#TUKUBAI    { width:  58px; line-height: 17px; border-right: solid 1px #999999; }
+#TUKUBAI_MAN{ width: 183px; line-height: 17px; border-right: solid 1px #999999; }
+#CMD_TIPS   { width:  87px; line-height: 17px; border-right: solid 1px #999999; }
+#SHELL_TIPS { width: 171px; line-height: 17px; border-right: solid 1px #999999; }
+#INFO       { width:  31px; line-height: 17px; border-right: solid 1px #999999; }
 
 #megamenu {
   display: table;
@@ -132,6 +132,10 @@
   border-bottom: 0px solid transparent;
 }
 
+#megamenu > li > ul > li:empty {
+  visibility: hidden;
+}
+
 #megamenu > li > ul > li.separator::before {
   position: absolute;
   content: '';
@@ -152,14 +156,6 @@
   border-top: 0px solid transparent;
   border-left: 0px solid lightgray;
   border-bottom: 0px solid transparent;
-}
-
-#megamenu > li > ul > li > hr {
-  border-top-width: 0px;
-  border-right-width: 0px;
-  border-bottom-width: 1px;
-  border-left-width: 0px;
-  border-bottom-color: #AAAAAA;
 }
 
 #megamenu > li > ul > li > a {
