Make some selectors hidden in PRINT mode.

--- a/MANUALHTML/COMMON/CSS/PRINT.CSS
+++ b/MANUALHTML/COMMON/CSS/PRINT.CSS
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013 Universal Shell Programming Laboratoryratory
+ * Copyright (c) 2013-2022 Universal Shell Programming Laboratoryratory
  *
  * Permission is hereby granted, free of charge, to any person 
  * obtaining a copy of this software and associated documentation 
@@ -22,12 +22,12 @@
  */
 @media print {
   body {
+    margin: 0 auto;
     color: #000;
     background: #fff;
-    width: 100%;
+    width: 800px;
     margin: 0;
     padding: 0;
-    font-size: 80%;
   }
   h1, h2, h3, ul, ol, dl, img, pre, div.nobreak {
     page-break-after: avoid;
@@ -47,7 +47,7 @@
   }
   #main a {
     font-weight: normal;
-    text-decoration: none;
+    text-decoration: none !important;
     color: #000000
   }
   #main a[href^=http]:after {
@@ -68,10 +68,10 @@
     border-style: none;
     margin-top: 120mm;
   }
-  #header, #socialnetwork, #pagenavigator {
+  #main >  h1, #header, #megamenu, .annotation, #socialnetwork, #pagenavigator, #lastmodified, #footer {
     display: none;
   }
-}
-
-@page {
+  #main dl.layout > * {
+    display: inline-block;
+  }
 }
