Append 'pre { white-space: pre-wrap; }' into MANUALHTML/COMMON/CSS/PRINT.CSS.

--- a/MANUALHTML/COMMON/CSS/PRINT.CSS
+++ b/MANUALHTML/COMMON/CSS/PRINT.CSS
@@ -53,6 +53,9 @@
   #main a[href^=http]:after {
     content:" (" attr(href) ") ";
   }
+  #main pre {
+    overflow: hidden;
+  }
   #footer a {
     font-weight: normal;
     text-decoration: none;
